--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </select>
         </label>
          <label>
-            Converter <b>para</b>
+            <b>para</b>
             <select>
                 <option>US$ Dólar americano</option>
                 <option>€ Euro</option>
@@ -31,6 +31,8 @@
         <label>
             Valor:
             <input type="number" placeholder="0,00" />
+        </label>
+        <button>Converter</button>
     </main>
 </body>
 
