--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
             <input type="number" placeholder="0,00" />
         </label>
         <button>Converter</button>
+        <section>
+            <div>
+                <img src="assets/Icon Brasil.png" alt="Logo-moeda-a-converter">
+                <p>Real</p>
+                <p>R$ 0,00</p>
+            </div>
+            <img src="assets/Vector.png"Seta">
+             <div>
+                <img src="assets/USA.png"Logo-moeda-a-convertida">
+                <p>Dólar</p>
+                <p>US$ 0.00</p>
+            </div>
+        </section>
     </main>
 </body>
 
