--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <img src="assets/LOGO.gif" alt="Logo do Convert Money" class="logo">
+    <img class="logo" src="assets/LOGO.gif" alt="Logo do Convert Money" class="logo">
     <main>
         <label>
             Converter <b>de</b>
