--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <button>Converter</button>
         <section>
             <div>
-                <img src="assets/Icon Brasil.png" alt="Logo-moeda-a-converter">
+                <img class="brasil" src="assets/Icon Brasil.png" alt="Logo-moeda-a-converter">
                 <p>Real</p>
                 <p>R$ 0,00</p>
             </div>
