--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <option>R$ Real Brasileiro</option>
             </select>
         </label>
-         <label>
+        <label>
             <b>para</b>
             <select>
                 <option>US$ Dólar americano</option>
@@ -34,21 +34,21 @@
         </label>
         <button>Converter</button>
         <section>
-            <div>
+            <div class="currency-box">
                 <img class="brasil" src="assets/Icon Brasil.png" alt="Logo-moeda-a-converter">
-                <p>Real</p>
-                <p>R$ 0,00</p>
+                <p class="currency" >Real</p>
+                <p class="currency-value" >R$ 0,00</p>
             </div>
-            <img src="assets/Vector.png"Seta">
-             <div>
-                <img src="assets/USA.png"Logo-moeda-a-convertida">
-                <p>Dólar</p>
-                <p>US$ 0.00</p>
+            <img class="arrow-img" src="assets/Vector.png" Seta">
+            <div class="currency-box">
+                <img src="assets/USA.png" Logo-moeda-a-convertida">
+                <p class="currency" >Dólar</p>
+                <p class="currency-value">US$ 0.00</p>
             </div>
         </section>
     </main>
     <footer>
-       
+
 
 </body>
 
