--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         rel="stylesheet">
     <title>Convert Money</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js"></script>
 </head>
 
 <body>
