--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <title>Convert Money</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./script.js"></script>
+   
 </head>
 
 <body>
@@ -33,7 +33,7 @@
             Valor:
             <input type="number" placeholder="0,00" />
         </label>
-        <button>Converter</button>
+        <button class="converter-button" >Converter</button>
         <section>
             <div class="currency-box">
                 <img class="brasil" src="assets/Icon Brasil.png" alt="Logo-moeda-a-converter">
@@ -49,7 +49,7 @@
         </section>
     </main>
     <footer>
-
+ <script src="./script.js"></script>
 
 </body>
 
