Update JS e HTML

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         rel="stylesheet">
     <title>Convert Money</title>
     <link rel="stylesheet" href="style.css">
-   
+
 </head>
 
 <body>
@@ -31,25 +31,25 @@
         </label>
         <label>
             Valor:
-            <input type="number" placeholder="0,00" />
+            <input class="input-currency" type="number" placeholder="0,00" />
         </label>
-        <button class="converter-button" >Converter</button>
+        <button class="converter-button">Converter</button>
         <section>
             <div class="currency-box">
                 <img class="brasil" src="assets/Icon Brasil.png" alt="Logo-moeda-a-converter">
-                <p class="currency" >Real</p>
-                <p class="currency-value" >R$ 0,00</p>
+                <p class="currency">Real</p>
+                <p class="currency-value">R$ 0,00</p>
             </div>
             <img class="arrow-img" src="assets/Vector.png" Seta">
             <div class="currency-box">
                 <img src="assets/USA.png" Logo-moeda-a-convertida">
-                <p class="currency" >Dólar</p>
+                <p class="currency">Dólar</p>
                 <p class="currency-value">US$ 0.00</p>
             </div>
         </section>
     </main>
     <footer>
- <script src="./script.js"></script>
+        <script src="./script.js"></script>
 
 </body>
 
