--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="currency-box">
                 <img class="brasil" src="assets/Icon Brasil.png" alt="Logo-moeda-a-converter">
                 <p class="currency">Real</p>
-                <p class="currency-value">R$ 0,00</p>
+                <p class="currency-value-to-convert">R$ 0,00</p>
             </div>
             <img class="arrow-img" src="assets/Vector.png" Seta">
             <div class="currency-box">
