--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </label>
         <label>
             <b>para</b>
-            <select>
+            <select class="currency-select" >
                 <option>US$ Dólar americano</option>
                 <option>€ Euro</option>
             </select>
