--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <label>
             <b>para</b>
             <select class="currency-select" >
-                <option>US$ Dólar americano</option>
-                <option>€ Euro</option>
+                <option value="dolar">US$ Dólar americano</option>
+                <option value="euro" >€ Euro</option>
             </select>
         </label>
         <label>
