--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </div>
             <img class="arrow-img" src="assets/Vector.png" Seta">
             <div class="currency-box">
-                <img src="assets/USA.png" Logo-moeda-a-convertida">
-                <p class="currency">Dólar</p>
+                <img class="currency-img" src="assets/USA.png" Logo-moeda-a-convertida">
+                <p class="currency" id="currency-name" >Dólar americano</p>
                 <p class="currency-value">US$ 0.00</p>
             </div>
         </section>
